[gd_scene load_steps=20 format=3 uid="uid://cmd4bf331ys0d"]

[ext_resource type="Script" path="res://Scripts/PlayerControl/PlayerController.gd" id="1_x1gqv"]
[ext_resource type="Script" path="res://Scripts/PlayerControl/StateMachine.gd" id="2_ytu5n"]
[ext_resource type="Script" path="res://Scripts/PlayerControl/States/IdlePlayerState.gd" id="3_2ioi1"]
[ext_resource type="Script" path="res://Scripts/PlayerControl/States/WalkingPlayerState.gd" id="4_1te1d"]
[ext_resource type="Script" path="res://Scripts/PlayerControl/States/SprintingPlayerState.gd" id="5_4e6ws"]
[ext_resource type="Script" path="res://Scripts/PlayerControl/States/CrouchingPlayerState.gd" id="6_uxwj3"]
[ext_resource type="Script" path="res://Scripts/PlayerControl/States/CrawlingPlayerState.gd" id="7_dr030"]
[ext_resource type="Script" path="res://Scripts/PlayerControl/States/FallingPlayerState.gd" id="8_a0ew8"]
[ext_resource type="Script" path="res://Scripts/PickupAndInventory/ItemStateMachine.gd" id="9_pto0q"]
[ext_resource type="Script" path="res://Scripts/PickupAndInventory/States/EmptyHandedPlayerState.gd" id="10_l8e2l"]
[ext_resource type="Script" path="res://Scripts/PickupAndInventory/PlayerInventory.gd" id="11_jsaha"]
[ext_resource type="Script" path="res://Scripts/PickupAndInventory/States/InInventoryState.gd" id="11_ntvem"]
[ext_resource type="Script" path="res://Scripts/PickupAndInventory/States/ItemHeldState.gd" id="12_hbf8k"]
[ext_resource type="FontFile" uid="uid://dj7adk4gvkv3v" path="res://Assets/Fonts/Kenney Future Narrow.ttf" id="13_2k07q"]
[ext_resource type="PackedScene" uid="uid://d1e7nhn8sor05" path="res://Scenes/inventory_UI.tscn" id="14_j45ao"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iq1uk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w8fdp"]
height = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4woau"]
radius = 0.4
height = 0.8

[sub_resource type="LabelSettings" id="LabelSettings_jhby2"]
font = ExtResource("13_2k07q")
font_size = 40

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0597537, 0)
collision_mask = 3
script = ExtResource("1_x1gqv")

[node name="StandingCapsule" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_iq1uk")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="PickupCast" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -1.4)
collision_mask = 2
hit_from_inside = true

[node name="Hand" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.389904, -0.265898, -1.2633)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_ytu5n")
current_state = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="StateMachine"]
script = ExtResource("3_2ioi1")

[node name="WalkingPlayerState" type="Node" parent="StateMachine"]
script = ExtResource("4_1te1d")

[node name="SprintingPlayerState" type="Node" parent="StateMachine"]
script = ExtResource("5_4e6ws")

[node name="CrouchingPlayerState" type="Node" parent="StateMachine"]
script = ExtResource("6_uxwj3")

[node name="CrawlingPlayerState" type="Node" parent="StateMachine"]
script = ExtResource("7_dr030")

[node name="FallingPlayerState" type="Node" parent="StateMachine"]
script = ExtResource("8_a0ew8")

[node name="CrouchingCapsule" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.748899, 0)
shape = SubResource("CapsuleShape3D_w8fdp")

[node name="CrawlingCapsule" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000533789, 0.379769, -0.00194401)
shape = SubResource("CapsuleShape3D_4woau")

[node name="StandingCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)
collision_mask = 3

[node name="CrouchingCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.49, 0)
collision_mask = 3

[node name="ItemStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("9_pto0q")
current_state = NodePath("EmptyHandedPlayerState")

[node name="EmptyHandedPlayerState" type="Node" parent="ItemStateMachine"]
script = ExtResource("10_l8e2l")

[node name="InInventoryState" type="Node" parent="ItemStateMachine"]
script = ExtResource("11_ntvem")

[node name="ItemHeldState" type="Node" parent="ItemStateMachine"]
script = ExtResource("12_hbf8k")

[node name="PlayerInventory" type="Node" parent="."]
script = ExtResource("11_jsaha")

[node name="InventoryUI" type="CanvasLayer" parent="PlayerInventory"]
visible = false

[node name="ColorRect" type="ColorRect" parent="PlayerInventory/InventoryUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.241156, 0.241156, 0.241156, 1)

[node name="Label" type="Label" parent="PlayerInventory/InventoryUI/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_right = 47.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Inventory"
label_settings = SubResource("LabelSettings_jhby2")

[node name="InventoryUi" parent="PlayerInventory/InventoryUI/ColorRect" instance=ExtResource("14_j45ao")]
layout_mode = 1
